--- a/src/Site_Structure.html
+++ b/src/Site_Structure.html
@@ -57,8 +57,8 @@
 
         .section {
             background-color: rgb(219, 146, 175);
-            padding: 10px 30px;
-            margin: 10px;
+            padding: 10px 50px;
+            margin: 10px 10px 10px 0;
             height: 50px;
         }
 
